--- a/.github/workflows/tf-plan.yml
+++ b/.github/workflows/tf-plan.yml
@@ -26,4 +26,8 @@ jobs:
         run: terraform init
       - name: Terraform Plan
         id: plan
-        run: terraform plan -var 'name=baseline-waf-rule-group' -var 'scope=REGIONAL'
+        run: |
+          terraform plan -var 'region="eu-west-1"' \
+            -var 'apigw_vpc_link_subnet_ids="[\"subnet-0effa1e57c8f69bc0\", \"subnet-0c7abf9a5ed4ef7d3\"]"' \
+            -var 'ecs_service_subnet_ids="[\"subnet-0effa1e57c8f69bc0\", \"subnet-0c7abf9a5ed4ef7d3\"]" \
+            -var 'efs_subnet_ids="[\"subnet-0effa1e57c8f69bc0\", \"subnet-0c7abf9a5ed4ef7d3\"]"'
