update precommit hooks version and readme

--- a/.terraform-docs.yml
+++ b/.terraform-docs.yml
@@ -17,6 +17,12 @@ sections:
 content: |-
   {{ .Header }}
 
+  # Usage Instructions
+  ## Example
+  ```hcl
+  {{ include "examples/default.tf" }}
+  ```
+
   {{ .Requirements }}
 
   {{ .Inputs }}
