--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -5,16 +5,21 @@ repos:
   - id: trailing-whitespace
   - id: end-of-file-fixer
   - id: check-yaml
+    args:
+      - "--allow-multiple-documents"
   - id: check-json
   - id: check-symlinks
   - id: detect-private-key
   - id: no-commit-to-branch
+    args: [--branch, main]
+  - id: pretty-format-json
+    args: [--autofix, --no-sort-keys]
 - repo: https://github.com/gitleaks/gitleaks
-  rev: v8.24.2
+  rev: v8.27.2
   hooks:
     - id: gitleaks
 - repo: https://github.com/antonbabenko/pre-commit-terraform
-  rev: v1.98.0
+  rev: v1.99.5
   hooks:
     - id: terraform_fmt
     - id: terraform_validate
@@ -24,12 +29,12 @@ repos:
       args:
         - --args=--config=__GIT_WORKING_DIR__/.tflint.hcl --fix
 - repo: https://github.com/bridgecrewio/checkov.git
-  rev: "3.2.396"
+  rev: "3.2.450"
   hooks:
     - id: checkov
       args: ["--quiet", "--compact", "--framework", "terraform", "--download-external-modules", "false", "--skip-path", "examples"]
 - repo: https://github.com/terraform-docs/terraform-docs
-  rev: v0.19.0
+  rev: v0.20.0
   hooks:
     - id: terraform-docs-go
       args: ["."]
